# vcpkg_sample

./: CMakeLists.txt  README.md  main.cpp  vcpkg,json  vcpkg.cmake  vcpkg.json
.github/workflows/: build.yml
ports/platform-delegates/: portfile.cmake  vcpkg.json
ports/platform-delegates-test/: portfile.cmake  vcpkg.json
ports/platform-exceptions/: portfile.cmake  vcpkg.json
ports/platform-exceptions-test/: portfile.cmake  vcpkg.json
